# haskell-rest

./: README.md  haskell-rest.cabal
src/Web/: Rest.hs
src/Web/Rest/: HTTP.hs  IOStreams.hs  Internal.hs
