
name:                haskell-rest
version:             0.4.0.0
synopsis:            Simple REST client.
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Rest,
                       Web.Rest.Internal,
                       Web.Rest.IOStreams,
                       Web.Rest.HTTP
  -- other-modules:       
  build-depends:       base,
                       text,
                       bytestring,
                       mtl,
                       transformers,
                       free,
                       errors,
                       http-streams,
                       io-streams,
                       HTTP,
                       network
  hs-source-dirs:      src
  default-language:    Haskell2010